<resources>
    <string name="app_name">宠米</string>
    <string name="default_unified_loading_text">请稍候&#8230;</string>
    <string name="network_error_text">连接异常，请稍后重试</string>
    <string name="psd_digits_text">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ&#032;&#033;\&#034;&#035;&#036;&#037;&#038;\&#039;&#040;&#041;&#042;&#043;&#044;&#045;&#046;&#047;&#058;&#059;&#060;&#061;&#062;&#063;&#064;&#091;&#092;&#093;&#094;&#095;&#096;&#123;&#124;&#125;&#126;&#160;&#161;&#162;&#163;&#164;&#165;&#166;&#167;&#168;&#169;&#170;&#171;&#172;&#173;&#174;&#175;&#176;&#177;&#178;&#179;&#180;&#181;&#182;&#183;&#184;&#185;&#186;&#187;&#188;&#189;&#190;&#191;</string>
    <string name="phone_digits_text">0123456789</string>
    <string name="ren">人</string>
    <string name="back_click_text">再按一次退出程序</string>
    <string name="crash_text">很抱歉,程序出现异常,即将退出</string>
    <string name="splash_text1">用</string>
    <string name="splash_text2">芯</string>
    <string name="splash_text3">宠</string>
    <string name="splash_text4">爱</string>
    <string name="splash_text5">copyright©2015Chongmi.com</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载…</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">上拉查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="main_homepage">附近</string>
    <string name="main_shopping">宠米</string>
    <string name="main_news">消息</string>
    <string name="main_mine">个人</string>
    <string name="main_createvent">创建活动</string>
    <string name="main_petdiary">写日记</string>
    <string name="dynamic">动态</string>
    <string name="attention">关注</string>
    <string name="attention_nodynamic">暂无好友动态</string>
    <string name="dynamic_zan">赞</string>
    <string name="active">活动</string>
    <string name="active_search">搜索</string>
    <string name="active_search_noresult">无搜索结果</string>
    <string name="petcategory_search_noresult">无搜索结果</string>
    <string name="active_people">您附近的活动</string>
    <string name="active_numtext">活动人数:</string>
    <string name="share_to">分享到：</string>
    <string name="share_to_wx">微信</string>
    <string name="share_to_wxf">朋友圈</string>
    <string name="share_to_wb">微博</string>
    <string name="share_report">举报</string>
    <string name="share_success">分享成功</string>
    <string name="share_fail">分享失败</string>
    <string name="title_next_tip">下一步</string>
    <string name="title_next_skip">跳过</string>
    <string name="mine_attention">关注</string>
    <string name="mine_attentioned">粉丝</string>
    <string name="mine_mypet">我的宠物</string>
    <string name="mine_setting">系统设置</string>
    <string name="setting_title">设置</string>
    <string name="setting_password">账号管理</string>
    <string name="setting_exit">退出登录</string>
    <string name="setting_clearcache">清理缓存</string>
    <string name="setting_good">给个好评呗</string>
    <string name="setting_feeback">意见反馈</string>
    <string name="setting_version">版本更新</string>
    <string name="setting_about">关于宠米</string>
    <string name="logout_waitting_text">正在退出</string>
    <string name="settingaccount_title">账号管理</string>
    <string name="settingaccount_password">修改密码</string>
    <string name="settingaccount_phone">更换手机号</string>
    <string name="changephone_title">更换手机号</string>
    <string name="changephone_righttext">确定</string>
    <string name="changephone_vcode">请输入6位验证码</string>
    <string name="changephone_oldphone">当前手机号码为：</string>
    <string name="changephone_newphone">请输入新手机号</string>
    <string name="login_title">用户登录</string>
    <string name="login_namehint">请输入手机号码</string>
    <string name="login_psdhint">请输入登录密码</string>
    <string name="login_fogotpsd">忘记密码</string>
    <string name="login_login">登录</string>
    <string name="login_regist">注册账号</string>
    <string name="login_thirdlogin">or</string>
    <string name="login_error_tip">账号或密码输入错误</string>
    <string name="login_waitting_text">正在登录</string>
    <string name="fogot_title">重置密码</string>
    <string name="fogot_title_righttv">完成</string>
    <string name="fogot_tip1">密码重置成功</string>
    <string name="fogot_edt_phone">输入注册手机号</string>
    <string name="fogot_edt_psd">密码需由6~15个字符组成，区分大小写</string>
    <string name="fogot_edt_check">输入验证码</string>
    <string name="fogot_tv_resendcount">%02d秒后重发</string>
    <string name="registe_title">注册</string>
    <string name="registe_title_righttext">下一步</string>
    <string name="registe_edt_phone">请输入手机号码</string>
    <string name="registe_edt_psd">请输入6-16位密码</string>
    <string name="registe_edt_check">请输入6位短信验证码</string>
    <string name="registe_tv_resendcount">%02d秒后重发</string>
    <string name="registe_tv_resend">发送验证码</string>
    <string name="registeover_title">主人资料</string>
    <string name="registeover_title_righttext">完成</string>
    <string name="registeover_tip1">点击添加头像</string>
    <string name="registeover_nickname">主人名称</string>
    <string name="registeover_nicknamehint">设置名称</string>
    <string name="registeover_choice">主人性别</string>
    <string name="registeover_choiceman">男</string>
    <string name="registeover_choicewoman">女</string>
    <string name="registeover_birthday">主人生日</string>
    <string name="registeover_image_tv_title">设置头像</string>
    <string name="registeover_image_btn_snapshot">拍照</string>
    <string name="registeover_image_btn_album">手机相册</string>
    <string name="registeover_image_btn_cancel">取消</string>
    <string name="registeover_submittip">正在创建资料 </string>
    <string name="registeeditpet_title">添加宠物</string>
    <string name="registeeditpet_tip1">点击添加宠物头像</string>
    <string name="registeeditpet_nickname">宠物昵称</string>
    <string name="registeeditpet_nicknamehint">设置宠物昵称</string>
    <string name="registeeditpet_choice">宠物性别</string>
    <string name="registeeditpet_choiceman">GG</string>
    <string name="registeeditpet_choicewoman">MM</string>
    <string name="registeeditpet_petstyle">宠物品种</string>
    <string name="registeeditpet_petstyle_tip">选择宠物品种</string>
    <string name="registeeditpet_birthday">宠物生日</string>
    <string name="registeeditpet_birthday_select_tip">请选择</string>
    <string name="registeeditpet_desc_tip">请填写宠物简介</string>
    <string name="registeeditpet_intro">宠物简介</string>
    <string name="nickname_ttb_title">修改昵称</string>
    <string name="nickname_title_righttext">完成</string>
    <string name="nickname_edittext">设置昵称</string>
    <string name="sex_ttb_title">性   别</string>
    <string name="sex_title_righttext">完成</string>
    <string name="sex_man">男</string>
    <string name="sex_woman">女</string>
    <string name="desc_edittext">简介不能超过十位</string>
    <string name="feedback_title">意见反馈</string>
    <string name="feedback_righttext">提交</string>
    <string name="feedback_edithint">您的宝贵意见，是我们前进的动力~</string>
    <string name="feedback_textnum">%s/500</string>
    <string name="feedback_over_title">反馈成功</string>
    <string name="feedback_over_righttv">完成</string>
    <string name="feedback_over_text1">反馈成功</string>
    <string name="feedback_over_text2">感谢您对宠米的关注与支持，我们会</string>
    <string name="feedback_over_text3">认真处理您的反馈。</string>
    <string name="password_ttb_title">修改密码</string>
    <string name="password_title_righttext">完成</string>
    <string name="password_edt_old">请输入原始密码</string>
    <string name="password_edt_new">请输入新密码</string>
    <string name="password_tv_tip">密码最少6位，最多15位，区分大小写</string>
    <string name="mine_title">个人中心</string>
    <string name="account_title">编辑个人资料</string>
    <string name="account_avatar">头像</string>
    <string name="account_nickname">昵称</string>
    <string name="account_sex">性别</string>
    <string name="account_birthday">生日</string>
    <string name="account_receiving_address">收货地址</string>
    <string name="account_btn_image_snapshot">拍照</string>
    <string name="account_btn_image_album">手机相册</string>
    <string name="account_btn_image_cancel">取消</string>
    <string name="account_center_attention">关注</string>
    <string name="account_center_fans">粉丝</string>
    <string name="account_center_petnum">Ta的宠物</string>
    <string name="account_center_mypetnum">我的宠物</string>
    <string name="account_center_morepet">查看更多</string>
    <string name="account_center_dynamic">Ta的动态</string>
    <string name="account_center_mydynamic">我的动态</string>
    <string name="account_center_message">私信</string>
    <string name="account_center_attentioned">已关注</string>
    <string name="attention_ttb_title">关注</string>
    <string name="attentioned_ttb_title">粉丝</string>
    <string name="dynamic_comment">评论</string>
    <string name="dynamic_readed">浏览</string>
    <string name="dynamic_share">分享</string>
    <string name="registe_attention_ttb_title">推荐关注</string>
    <string name="registe_attention_refresh">换一批</string>
    <string name="registe_attention_attention">关注</string>
    <string name="about_ttb_title">关于宠米</string>
    <string name="mypet_ttb_title">我的宠物</string>
    <string name="editpet_title">编辑宠物资料</string>
    <string name="editpet_righttext">删除</string>
    <string name="add_pet">添加宠物</string>
    <string name="petstyle_ttb_title">宠物种族</string>
    <string name="petcategory_ttb_title">宠物品种</string>
    <string name="petlist_title">宠物列表</string>
    <string name="addpet_avatar">宠物头像</string>
    <string name="addpet_nickname">添加昵称</string>
    <string name="editpet_nickname">宠物昵称</string>
    <string name="addpet_sex">宠物性别</string>
    <string name="addpet_style">宠物品种</string>
    <string name="addpet_birthday">宠物生日</string>
    <string name="addpet_desc">宠物简介</string>
    <string name="petdesc_title">宠物简介</string>
    <string name="petdesc_edithint">请输入0-30个字符的简介</string>
    <string name="petdiary_ttb_title">发布宠物日记</string>
    <string name="petdiary_title_righttext">发布</string>
    <string name="petdiary_edithint">说点它的新鲜事...</string>
    <string name="petdiary_aboutpet">关联宠物</string>
    <string name="petdiarydetail_title">详情</string>
    <string name="petdiarydetail_commont">评论:</string>
    <string name="petdiarydetail_comment_report">举报</string>
    <string name="petdiarydetail_delete">删除</string>
    <string name="petdiarydetail_hasdelete">该动态已被删除</string>
    <string name="petdiaryimage_down">保存到手机</string>
    <string name="report_ttb_title">举报</string>
    <string name="report_overttb_title">感谢举报</string>
    <string name="report_ttb_righttv">提交</string>
    <string name="report_overtv">完成</string>
    <string name="report_overtv1">已提交</string>
    <string name="report_overtv2">您的举报已提交，我们会尽快处理，</string>
    <string name="report_overtv3">感谢你的支持。</string>
    <string name="report_reason">选择举报原因</string>
    <string name="report_item1">色情低俗</string>
    <string name="report_item2">广告骚扰</string>
    <string name="report_item3">谣言</string>
    <string name="report_item4">政治敏感</string>
    <string name="report_item5">违法</string>
    <string name="report_other">其他</string>
    <string name="homepage_distance_text">km</string>
    <string name="image_detail_title">查看图片</string>
    <string name="zanlist_title">点赞</string>
    <string name="createevent_title">评论</string>
    <string name="hardware_startbind_text1">p2  或     p1</string>
    <string name="hardware_startbind_text2">绑定宠米智能狗狗项圈后可以详细了解宠物</string>
    <string name="hardware_startbind_text3">活动状况，喂食建议等指数</string>
    <string name="hardware_startbind_bindbtn">立即绑定</string>
    <string name="addquestion_title">描述你的问题</string>
    <string name="addquestion_title_hint">请在这里阐述你的问题</string>
    <string name="addquestion_title_length">%s/50</string>
    <string name="addquestion_content1">问题描述</string>
    <string name="addquestion_content2">(选填)</string>
    <string name="addquestion_content_hint">你可以在这里继续补充问题细节</string>
    <string name="addquestion_content_length">%s/500</string>
</resources>