<?xml version="1.0" encoding="utf-8"?>
<mobi.jzcx.android.core.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/comm_activity_background_color"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        app:layout_heightPercent="29.7%w"
        app:layout_marginTopPercent="38.05%w"
        app:layout_widthPercent="60.55%w"
        android:src="@drawable/splash_image" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:layout_marginBottomPercent="5.55%w"
        android:gravity="center_horizontal"
        android:text="@string/splash_text5"
        android:textColor="#c3c3c3"
        android:textSize="11sp" />

    <mobi.jzcx.android.core.percent.PercentLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:layout_marginBottomPercent="12%w"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/splash_text1"
            android:textColor="#5d5d5d"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_marginLeftPercent="4.44%w"
            android:text="@string/splash_text2"
            android:textColor="#5d5d5d"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_marginLeftPercent="4.44%w"
            android:text="@string/splash_text3"
            android:textColor="#5d5d5d"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_marginLeftPercent="4.44%w"
            android:text="@string/splash_text4"
            android:textColor="#5d5d5d"
            android:textSize="15sp" />
    </mobi.jzcx.android.core.percent.PercentLinearLayout>

</mobi.jzcx.android.core.percent.PercentRelativeLayout>