<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/comm_activity_background_color"
    android:orientation="vertical" >

    <include layout="@layout/comm_title_bar" />

    <mobi.jzcx.android.core.percent.PercentLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:layout_marginTopPercent="25%w"
            android:src="@drawable/reportover_img" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:layout_marginTopPercent="8%w"
            android:text="@string/feedback_over_text1"
            android:textColor="#ff6600"
            android:textSize="17sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:layout_marginTopPercent="4%w"
            android:text="@string/feedback_over_text2"
            android:textColor="#999999"
            android:textSize="13sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:layout_marginTopPercent="2%w"
            android:text="@string/feedback_over_text3"
            android:textColor="#999999"
            android:textSize="13sp" />
    </mobi.jzcx.android.core.percent.PercentLinearLayout>

</LinearLayout>