<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/comm_activity_background_color"
    android:orientation="vertical" >

    <include
        android:id="@+id/hardwarestartbind_title"
        layout="@layout/comm_title_bar" />

    <mobi.jzcx.android.core.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/hardwarestartbind_title" >

        <mobi.jzcx.android.core.percent.PercentLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                app:layout_heightPercent="40.55%w"
                app:layout_marginTopPercent="18.19%w"
                app:layout_widthPercent="84.44%w"
                android:src="@drawable/hardware_startbind_img" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                app:layout_marginTopPercent="7.08%w"
                android:text="@string/hardware_startbind_text1"
                android:textColor="#505050"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                app:layout_marginTopPercent="27.36%w"
                android:text="@string/hardware_startbind_text2"
                android:textColor="#666666"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                app:layout_marginTopPercent="1%w"
                android:text="@string/hardware_startbind_text3"
                android:textColor="#666666"
                android:textSize="13sp" />
        </mobi.jzcx.android.core.percent.PercentLinearLayout>

        <Button
            android:id="@+id/startbind_bindbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            app:layout_heightPercent="13.61%w"
            app:layout_marginBottomPercent="7.64%w"
            app:layout_marginLeftPercent="4.16%w"
            app:layout_marginRightPercent="4.16%w"
            android:background="@drawable/startbind_bindbtnbg"
            android:text="@string/hardware_startbind_bindbtn"
            android:textColor="#ffffff"
            android:textSize="17sp" />
    </mobi.jzcx.android.core.percent.PercentRelativeLayout>

</RelativeLayout>