<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <include layout="@layout/comm_title_bar" />

    <ScrollView
        android:id="@+id/addquestion_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <mobi.jzcx.android.core.percent.PercentLinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_marginLeftPercent="3.33%w"
                    app:layout_marginTopPercent="5%w"
                    android:text="@string/addquestion_title"
                    android:textColor="#101010"
                    android:textSize="15sp" />

                <mobi.jzcx.android.core.percent.PercentLinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_heightPercent="33.61%w"
                    app:layout_marginLeftPercent="3.33%w"
                    app:layout_marginRightPercent="3.33%w"
                    app:layout_marginTopPercent="3.33%w"
                    android:background="@drawable/addquestion_editbg" >

                    <EditText
                        android:id="@+id/addquestion_title"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layout_marginLeftPercent="3.33%w"
                        app:layout_marginRightPercent="3.33%w"
                        app:layout_marginTopPercent="3.33%w"
                        android:background="@color/transparent"
                        android:gravity="left|top"
                        android:hint="@string/addquestion_title_hint"
                        android:lineSpacingExtra="20px"
                        android:maxLength="50"
                        android:textColor="#444444"
                        android:textColorHint="#999999"
                        android:textSize="14sp" />
                </mobi.jzcx.android.core.percent.PercentLinearLayout>

                <TextView
                    android:id="@+id/addquestion_titleLength"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    app:layout_marginRightPercent="3.33%w"
                    app:layout_marginTopPercent="3.33%w"
                    android:text="@string/addquestion_title_length"
                    android:textColor="#666666"
                    android:textSize="13sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_marginLeftPercent="3.33%w"
                    app:layout_marginTopPercent="3.33%w"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/addquestion_content1"
                        android:textColor="#101010"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/addquestion_content2"
                        android:textColor="#999999"
                        android:textSize="15sp" />
                </LinearLayout>

                <mobi.jzcx.android.core.percent.PercentLinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_heightPercent="59.44%w"
                    app:layout_marginLeftPercent="3.33%w"
                    app:layout_marginRightPercent="3.33%w"
                    app:layout_marginTopPercent="3.33%w"
                    android:background="@drawable/addquestion_editbg"
                    android:orientation="vertical" >

                    <EditText
                        android:id="@+id/addquestion_context"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_heightPercent="32.44%w"
                        app:layout_marginLeftPercent="3.33%w"
                        app:layout_marginRightPercent="3.33%w"
                        app:layout_marginTopPercent="3.33%w"
                        android:background="@color/transparent"
                        android:gravity="left|top"
                        android:hint="@string/addquestion_content_hint"
                        android:lineSpacingExtra="20px"
                        android:maxLength="500"
                        android:textColor="#444444"
                        android:textColorHint="#999999"
                        android:textSize="14sp" />

                    <GridView
                        android:id="@+id/addquestion_grid"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_heightPercent="25%w"
                        app:layout_marginLeftPercent="3.33%w"
                        app:layout_marginRightPercent="3.33%w"
                        android:listSelector="@color/transparent"
                        android:numColumns="4" />
                </mobi.jzcx.android.core.percent.PercentLinearLayout>

                <TextView
                    android:id="@+id/addquestion_contextLength"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    app:layout_marginRightPercent="3.33%w"
                    app:layout_marginTopPercent="3.33%w"
                    android:text="@string/addquestion_content_length"
                    android:textColor="#666666"
                    android:textSize="13sp" />
            </mobi.jzcx.android.core.percent.PercentLinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>