<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/comm_activity_background_color"
    android:orientation="vertical" >

    <include
        android:id="@+id/titlebar_fogot"
        layout="@layout/comm_title_bar" />

    <mobi.jzcx.android.core.percent.PercentLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="vertical" >

        <View
            android:layout_width="match_parent"
            app:layout_heightPercent="5%w"
            android:background="#f4f4f4" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#d8d8d8" />

        <mobi.jzcx.android.chongmi.view.ClearEditText
            android:id="@+id/edt_password_old"
            android:layout_width="match_parent"
            android:layout_height="0px"
            app:layout_heightPercent="13.61%w"
            app:layout_marginLeftPercent="3.33%w"
            app:layout_marginRightPercent="3.33%w"
            android:background="@drawable/transparent"
            android:digits="@string/psd_digits_text"
            android:hint="@string/password_edt_old"
            android:inputType="textVisiblePassword"
            android:maxLength="16"
            android:textColor="#444444"
            android:textColorHint="#999999"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            app:layout_marginLeftPercent="3.33%w"
            android:background="#d8d8d8" />

        <mobi.jzcx.android.chongmi.view.ClearEditText
            android:id="@+id/edt_password_new"
            android:layout_width="match_parent"
            android:layout_height="0px"
            app:layout_heightPercent="13.61%w"
            app:layout_marginLeftPercent="3.33%w"
            app:layout_marginRightPercent="3.33%w"
            android:background="@drawable/transparent"
            android:digits="@string/psd_digits_text"
            android:hint="@string/password_edt_new"
            android:inputType="textVisiblePassword"
            android:maxLength="16"
            android:textColor="#444444"
            android:textColorHint="#999999"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#d8d8d8" />
    </mobi.jzcx.android.core.percent.PercentLinearLayout>

</LinearLayout>